--- a/src/styles/Borrow.css
+++ b/src/styles/Borrow.css
@@ -1,6 +1,6 @@
-/* .borrow-page {
+.borrow-page {
   padding: 20px;
-  font-family: sans-serif;
+  /* font-family: sans-serif; */
   text-align: center;
 }
 
@@ -33,7 +33,7 @@
 .borrow-card button {
   margin-top: 10px;
   padding: 8px 12px;
-  background-color: #e74c3c;
+  background-color: #0a4d07;
   color: white;
   border: none;
   border-radius: 6px;
@@ -41,9 +41,9 @@
 }
 
 .borrow-card button:hover {
-  background-color: #c0392b;
-} */
-.borrow-page {
+  background-color: #2bc064;
+}
+/* .borrow-page {
   padding: 2rem;
   text-align: center;
 }
@@ -68,4 +68,4 @@
   width: 100%;
   height: 150px;
   object-fit: cover;
-}
+} */
